Wed Feb 28 11:08:06 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* config.h: Remove C_ALLOCA, CRAY_STACKSEG_END, HAVE_ALLOCA,
	HAVE_ALLOCA_H, and STACK_DIRECTION to reflect alloca removal.

Mon Feb 19 00:35:24 1996  Karl Fogel  <kfogel@floss.red-bean.com>

        * Makefile.in: deal with new objects `mkmodules' and `vasprintf'.

        * getpass.c (EchoOn, EchoOff): new funcs.
        (getpass): use above new funcs to avoid echoing the password to
        the screen.

Mon Feb 12 16:09:55 1996  Norbert Kiesel  <nk@col.sw-ley.de>

	* run.c (run_popen): Changed more Popen() to run_popen()

Mon Feb 12 03:33:27 1996  Benjamin J. Lee  <benjamin@cyclic.com>

	* run.c: Changed Popen() to run_popen() for the benefit of
	case-insensitive linkers (VMS) which confuse Popen() with popen()

Mon Feb 12 03:14:36 1996  Karl Fogel  <kfogel@floss.red-bean.com>

        * options.h (PATCH_PROGRAM): "cvspatch" (see comment).

Fri Feb  9 22:10:12 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* config.h: Remove SYSTEM_COMMENT_TABLE.

Thu Feb  1 15:07:13 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* options.h: Remove RM; no longer used.

	* filesubr.c: Remove rcsid.

Sun Jan 28 12:31:03 1996  Jim Kingdon  (kingdon@beezley)

	* filesubr.c (unlink_file): Use xchmod, not chmod, to make the
	file read-write.
	(xchmod): Translate / to \ in file name.  If file doesn't exist,
	return ENOENT rather than passing it to attrib (which will print an
	error message).

Sun Jan 28 01:51:27 1996  Jim Kingdon  (kingdon@beezley)

	* config.h: Fix unclosed comment.

Sun Jan 28 00:16:58 1996  Karl Fogel  (kfogel@floss.cyclic.com)

        * filesubr.c (xchmod): rewritten for OS/2.

Sat Jan 27 16:18:20 1996  Karl Fogel  (kfogel@floss.cyclic.com)

        * config.h (CHMOD_BROKEN): define to 1.

        * filesubr.c (rename_file): rename() returns non-zero error codes,
        not necessarily negative.

Fri Jan 26 00:52:12 1996  unknown  (unknown@beezley)
